--- a/SiteSolarMetrics/download.html
+++ b/SiteSolarMetrics/download.html
@@ -18,9 +18,9 @@
         <div class="header-bottom">
             <nav class="nav">
                 <a href="sobre.html">Sobre</a>
-                <a href="#">|</a>
+                <hr class="w-[0.1rem] h-[2.0rem] border-0 bg-[#D9D9D9]/5">
                 <a href="desenvolvedores.html">Desenvolvedores</a>
-                <a href="#">|</a>
+                <hr class="w-[0.1rem] h-[2.0rem] border-0 bg-[#D9D9D9]/5">
                 <a href="download.html">Download</a>
             </nav>
         </div>
