--- a/SiteSolarMetrics/index.html
+++ b/SiteSolarMetrics/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SolarMetrics - Home</title>
     <link rel="stylesheet" href="estilos/estilo.css">
+    <div class="background-carousel">
+        <div class="carousel-slide" style="background-image: url('imagens/banner_8.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('imagens/banner_7.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('imagens/banner_6.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('imagens/banner_9.png');"></div>
+    </div>
+    
 </head>
 <body>
     <!-- Header fixo no topo da página -->
@@ -18,6 +25,7 @@
         <div class="header-bottom">
             <nav class="nav">
                 <a href="sobre.html">Sobre</a>
+                <hr class="w-[0.1rem] h-[2.0rem] border-0 bg-[#D9D9D9]/5">
                 <a href="desenvolvedores.html">Desenvolvedores</a>
             </nav>
         </div>
@@ -25,8 +33,9 @@
 
     <!-- Banner com imagem de fundo -->
     <section class="banner">
-        <img src="imagens/banner.png" alt="Banner do SolarMetrics" class="banner-image">
-        <h1 class="banner-title">Junte-se a <span>SolarMetrics</span>, e venha monitorar seu sistema solar.</h1>
+        
+        <h1 class="banner-title">Junte-se a&nbsp;<span>SolarMetrics</span>, e venha monitorar seu sistema solar</h1>
+        <h1> </h1>
     </section>
 
     <!-- FAQ Section -->
