--- a/SiteSolarMetrics/sobre.html
+++ b/SiteSolarMetrics/sobre.html
@@ -23,8 +23,6 @@
                 <a href="sobre.html">Sobre</a>
                 <hr class="w-[0.1rem] h-[2.0rem] border-0 bg-[#D9D9D9]/5">
                 <a href="desenvolvedores.html">Desenvolvedores</a>
-                <hr class="w-[0.1rem] h-[2.0rem] border-0 bg-[#D9D9D9]/5">
-                <a href="download.html">Download</a>
             </nav>
         </div>
     </header>
@@ -38,43 +36,47 @@
             <div class="paginasobremain">
                 <h3>Nossos Serviços</h3>
                 <div class="caixagrande">
-                    <img src="imagens/icone1.png">
+                    <img src="imagens/imgsobre1.png">
                     <div class="caixamenor">
-                        <h4>Título Interno</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit reprehenderit nam et nemo
-                            dolore quibusdam quidem maiores ullam unde. Quasi quo animi eos quae illum voluptatum quod
-                            modi aliquid perferendis.</p>
+                        <h4>Automatize seu Sistema Solar</h4>
+                        <p>Nosso sistema automatizado conecta os sensores diretamente ao painel de controle, oferecendo
+                            informações precisas e relatórios prontos. Assim, você economiza tempo e garante eficiência
+                            no acompanhamento do seu consumo e geração de energia.</p>
 
                     </div>
                 </div>
                 <div class="caixagrande">
-                    <img src="imagens/icone2.png">
+                    <img src="imagens/imgsobre2.png">
                     <div class="caixamenor">
-                        <h4>Título Interno</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit reprehenderit nam et nemo
-                            dolore quibusdam quidem maiores ullam unde. Quasi quo animi eos quae illum voluptatum quod
-                            modi aliquid perferendis.</p>
+                        <h4>Monitoramento em Tempo Real</h4>
+                        <p>Tenha total controle do seu sistema solar com dados atualizados a cada momento. Acompanhe em
+                            um único painel o quanto está sendo gerado, consumido e aproveitado, identificando
+                            oportunidades para melhorar o uso da sua energia de forma simples e rápida.</p>
 
                     </div>
                 </div>
                 <div class="caixagrande">
-                    <img src="imagens/icone3.png">
+                    <img src="imagens/imgsobre3.png">
                     <div class="caixamenor">
-                        <h4>Título Interno</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit reprehenderit nam et nemo
-                            dolore quibusdam quidem maiores ullam unde. Quasi quo animi eos quae illum voluptatum quod
-                            modi aliquid perferendis.</p>
+                        <h4>Economize e Lucre com Energia Solar</h4>
+                        <p>Descubra quanto você economizou ao longo do tempo com a SolarMetrics. Nosso sistema permite
+                            que você visualize os benefícios reais da sua energia solar, ajudando a planejar melhor o
+                            consumo e maximizar o aproveitamento da sua instalação.</p>
 
                     </div>
                 </div>
                 <div class="caixagrande">
-                    <img src="imagens/icone4.png">
+                    <img src="imagens/imgsobre4.png">
                     <div class="caixamenor">
-                        <h4>Título Interno</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit reprehenderit nam et nemo
-                            dolore quibusdam quidem maiores ullam unde. Quasi quo animi eos quae illum voluptatum quod
-                            modi aliquid perferendis.</p>
-
+                        <h4>Descubra a solução ideal para o seu negócio!
+                            <br>
+                            Fale com nossos especialistas:
+                            <br>
+                        </h4>
+                        <div class="telegram-container">
+                            <img src="imagens/iconetelegram.png" alt="Telegram Logo" class="telegram-logo">
+                            <p>Telegram: @SolarMetrics_bot</p>
+                          </div>
                     </div>
                 </div>
             </div>
