--- a/SiteSolarMetrics/sobre.html
+++ b/SiteSolarMetrics/sobre.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SolarMetrics - Home</title>
     <link rel="stylesheet" href="estilos/estilo.css">
+    <div class="background-carousel">
+        <div class="carousel-slide" style="background-image: url('imagens/banner_8.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('imagens/banner_7.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('imagens/banner_6.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('imagens/banner_9.png');"></div>
+    </div>
 </head>
 
 <body>
@@ -29,7 +35,6 @@
 
     <!-- Banner com título centralizado -->
     <section class="bannersobre">
-        <img src="imagens/banner.png" alt="Banner do SolarMetrics" class="banner-image">
         <h2>Conecte-se ao futuro com <br><span>energia limpa</span></h2>
 
         <section class="paginasobre">
