--- a/SiteSolarMetrics/index.html
+++ b/SiteSolarMetrics/index.html
@@ -64,7 +64,7 @@
                 <p>Veja o lucro gerado pela sua instalação solar e acompanhe quanto você economiza mensalmente.</p>
             </div>
             <div class="caixa-saiba-mais">
-                <button class="saiba-mais">SAIBA MAIS</button>
+                <a href="sobre.html"><button class="saiba-mais">SAIBA MAIS</button></a>
             </div>
         </div>
     </section>
