--- a/SiteSolarMetrics/dashboard.html
+++ b/SiteSolarMetrics/dashboard.html
@@ -28,7 +28,7 @@
 
         <!-- Botões do Menu -->
         <nav class="menu">
-            <a href="#" class="menu-item ativo" id="overview">Overview</a>
+            <a href="#" class="menu-item" id="overview">Overview</a>
             <a href="#" class="menu-item" id="notifications">Notificações</a>
             <a href="#" class="menu-item" id="settings">Configurações</a>
         </nav>
