--- a/SiteSolarMetrics/index.html
+++ b/SiteSolarMetrics/index.html
@@ -132,8 +132,11 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <img src="imagens/logo_texto_amarelo.png" alt="Logo ARC" title="Logo ARC">
-        <p>© Todos os direitos reservados - Grupo ARC</p>
+        
+        <div class="texto-logo">
+            <img id="logo-arc" src="imagens/logo_texto_amarelo.png" alt="Logo ARC" title="Logo ARC">
+            <p id="copyright">© Todos os direitos reservados - Grupo ARC</p>
+        </div>
         <div class="social-icons">
             <a href="https://www.linkedin.com" target="_blank"><img src="imagens/iconein.png" alt="LinkedIn"
                     title="Página LinkedIn"></a>
