--- a/SiteSolarMetrics/desenvolvedores.html
+++ b/SiteSolarMetrics/desenvolvedores.html
@@ -16,13 +16,13 @@
                 <a href="index.html"><img src="imagens/logo_SolarMetricsBranca.png"
                         alt="Logo SolarMetrics" title="Botão Voltar para Home"></a>
             </div>
-            <a href="paginalogin.html"><button class="login-button">Fazer login</button></a>
+            <a href="paginalogin.html"><button class="login-button" title="Botão Fazer Login">Fazer login</button></a>
         </div>
         <div class="header-bottom">
             <nav class="nav">
-                <a href="sobre.html">Sobre</a>
+                <a href="sobre.html" title="Link para pagina Sobre">Sobre</a>
                 <hr class="w-[0.1rem] h-[2.0rem] border-0 bg-[#D9D9D9]/5">
-                <a href="desenvolvedores.html">Desenvolvedores</a>
+                <a href="desenvolvedores.html" title="Link para pagina desenvolvedores">Desenvolvedores</a>
             </nav>
         </div>
     </header>
