--- a/SiteSolarMetrics/index.html
+++ b/SiteSolarMetrics/index.html
@@ -36,7 +36,6 @@
     <!-- Banner com imagem de fundo -->
     <section class="banner">
         <h1 class="banner-title">Junte-se a&nbsp;<span>SolarMetrics</span>, e venha monitorar seu sistema solar</h1>
-
     </section>
 
     <section class="servicos">
@@ -132,21 +131,19 @@
 
     <!-- Footer -->
     <footer class="footer">
-        
         <div class="texto-logo">
             <img id="logo-arc" src="imagens/logo_texto_amarelo.png" alt="Logo ARC" title="Logo ARC">
-            <p id="copyright">© Todos os direitos reservados - Grupo ARC</p>
+            <p id="copyright">© Todos os direitos reservados</p>
         </div>
         <div class="social-icons">
-            <a href="https://www.linkedin.com" target="_blank"><img src="imagens/iconein.png" alt="LinkedIn"
+            <a href="https://www.linkedin.com" target="_blank"><img id="social" src="imagens/iconein.png" alt="LinkedIn"
                     title="Página LinkedIn"></a>
-            <a href="https://github.com" target="_blank"><img src="imagens/iconegithub.png" alt="GitHub"
+            <a href="https://github.com" target="_blank"><img id="social" src= "imagens/iconegithub.png" alt="GitHub"
                     title="Página GitHub"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="imagens/iconeig.png" alt="Instagram"
+            <a href="https://www.instagram.com" target="_blank"><img id="social" src="imagens/iconeig.png" alt="Instagram"
                     title="Página Instagram"></a>
         </div>
     </footer>
-
     <script src="scripts/script.js"></script>
 </body>
 
