--- a/SiteSolarMetrics/sobre.html
+++ b/SiteSolarMetrics/sobre.html
@@ -36,7 +36,6 @@
     <!-- Banner com título centralizado -->
     <section class="bannersobre">
         <h2>Conecte-se ao futuro com <br><span>energia limpa</span></h2>
-
         <section class="paginasobre">
             <div class="paginasobremain">
                 <h3>Nossos Serviços</h3>
@@ -79,9 +78,9 @@
                             <br>
                         </h4>
                         <div class="telegram-container">
-                            <img src="imagens/iconetelegram.png" alt="Telegram Logo" class="telegram-logo">
-                            <p>Telegram: @SolarMetrics_bot</p>
-                          </div>
+                            <a href="https://t.me/SolarMetrics_bot" target="_blank"><img src="imagens/iconetelegram.png" alt="Telegram Logo" class="telegram-logo"></a>
+                            <a href="https://t.me/SolarMetrics_bot" target="_blank"><p>Telegram: @SolarMetrics_bot</p></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -92,14 +91,16 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <img src="imagens/logo_texto_amarelo.png" alt="Logo ARC" title="Logo ARC">
-        <p>© Todos os direitos reservados - Grupo ARC</p>
+        <div class="texto-logo">
+            <img id="logo-arc" src="imagens/logo_texto_amarelo.png" alt="Logo ARC" title="Logo ARC">
+            <p id="copyright">© Todos os direitos reservados</p>
+        </div>
         <div class="social-icons">
-            <a href="https://www.linkedin.com" target="_blank"><img src="imagens/iconein.png" alt="LinkedIn"
+            <a href="https://www.linkedin.com/company/105408401/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BVM5xlup5RA2%2Fp2aMNQVgXA%3D%3D" target="_blank"><img id="social" src="imagens/iconein.png" alt="LinkedIn"
                     title="Página LinkedIn"></a>
-            <a href="https://github.com" target="_blank"><img src="imagens/iconegithub.png" alt="GitHub"
+            <a href="https://github.com/ARC-ceo/SolarMetrics" target="_blank"><img id="social" src= "imagens/iconegithub.png" alt="GitHub"
                     title="Página GitHub"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="imagens/iconeig.png" alt="Instagram"
+            <a href="https://www.instagram.com" target="_blank"><img id="social" src="imagens/iconeig.png" alt="Instagram"
                     title="Página Instagram"></a>
         </div>
     </footer>
