--- a/SiteSolarMetrics/paginalogin.html
+++ b/SiteSolarMetrics/paginalogin.html
@@ -74,14 +74,16 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <img src="imagens/logo_texto_amarelo.png" alt="Logo ARC" title="Logo ARC">
-        <p>© Todos os direitos reservados - Grupo ARC</p>
+        <div class="texto-logo">
+            <img id="logo-arc" src="imagens/logo_texto_amarelo.png" alt="Logo ARC" title="Logo ARC">
+            <p id="copyright">© Todos os direitos reservados</p>
+        </div>
         <div class="social-icons">
-            <a href="https://www.linkedin.com" target="_blank"><img src="imagens/iconein.png" alt="LinkedIn"
+            <a href="https://www.linkedin.com/company/105408401/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BVM5xlup5RA2%2Fp2aMNQVgXA%3D%3D" target="_blank"><img id="social" src="imagens/iconein.png" alt="LinkedIn"
                     title="Página LinkedIn"></a>
-            <a href="https://github.com" target="_blank"><img src="imagens/iconegithub.png" alt="GitHub"
+            <a href="https://github.com/ARC-ceo/SolarMetrics" target="_blank"><img id="social" src= "imagens/iconegithub.png" alt="GitHub"
                     title="Página GitHub"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="imagens/iconeig.png" alt="Instagram"
+            <a href="https://www.instagram.com" target="_blank"><img id="social" src="imagens/iconeig.png" alt="Instagram"
                     title="Página Instagram"></a>
         </div>
     </footer>
