--- a/SiteSolarMetrics/paginalogin.html
+++ b/SiteSolarMetrics/paginalogin.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SolarMetrics - Home</title>
     <link rel="stylesheet" href="estilos/estilo.css">
+    <div class="background-carousel">
+        <div class="carousel-slide" style="background-image: url('imagens/banner_8.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('imagens/banner_7.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('imagens/banner_6.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('imagens/banner_9.png');"></div>
+    </div>
 </head>
 
 <body>
@@ -29,7 +35,6 @@
 
     <!-- Banner com título centralizado -->
     <section class="banner">
-        <img src="imagens/banner.png" alt="Banner do SolarMetrics" class="banner-image">
         <section class="loginpage">
             <div class="caixabotoeslogin">
                 <div id="loginTab" class="botaologin ativo">Login</div>
@@ -69,7 +74,7 @@
                 </div>
                 <button type="button">Cadastrar</button>
             </form>
-        </section>        
+        </section>
     </section>
 
     <!-- Footer -->
@@ -79,12 +84,12 @@
             <p id="copyright">© Todos os direitos reservados</p>
         </div>
         <div class="social-icons">
-            <a href="https://www.linkedin.com/company/105408401/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BVM5xlup5RA2%2Fp2aMNQVgXA%3D%3D" target="_blank"><img id="social" src="imagens/iconein.png" alt="LinkedIn"
-                    title="Página LinkedIn"></a>
-            <a href="https://github.com/ARC-ceo/SolarMetrics" target="_blank"><img id="social" src= "imagens/iconegithub.png" alt="GitHub"
-                    title="Página GitHub"></a>
-            <a href="https://www.instagram.com" target="_blank"><img id="social" src="imagens/iconeig.png" alt="Instagram"
-                    title="Página Instagram"></a>
+            <a href="https://www.linkedin.com/company/105408401/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BVM5xlup5RA2%2Fp2aMNQVgXA%3D%3D"
+                target="_blank"><img id="social" src="imagens/iconein.png" alt="LinkedIn" title="Página LinkedIn"></a>
+            <a href="https://github.com/ARC-ceo/SolarMetrics" target="_blank"><img id="social"
+                    src="imagens/iconegithub.png" alt="GitHub" title="Página GitHub"></a>
+            <a href="https://www.instagram.com" target="_blank"><img id="social" src="imagens/iconeig.png"
+                    alt="Instagram" title="Página Instagram"></a>
         </div>
     </footer>
 
