--- a/SiteSolarMetrics/desenvolvedores.html
+++ b/SiteSolarMetrics/desenvolvedores.html
@@ -42,7 +42,7 @@
                     class="foto-integrante">
                 <div class="info">
                     <div class="info_texto">
-                        <h2>Arthur Algate</h2>
+                        <h2>Arthur Ribeiro </h2>
                         <p>RM 560109 | Turma 1TDSQ</p>
                     </div>
                     <div class="links">
